--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
-    <title></title>
-    <body>
+    <title>Dodge</title>
+    <body style="background-color:#ADD8E6">
         <header>
           <img src="https://ic.pics.livejournal.com/cardomina/62795088/39307/39307_900.jpg" width="130" height="100">
           <h1 style="text-align:center;font-size:50px">Dodge</h1>
@@ -9,17 +9,42 @@
           <img src="https://cdn2.riastatic.com/photosnew/auto/photo/dodge_challenger__503540727f.jpg" width="300px" height="200px">
         </header>
         <a href=""> <font color="blue"></font> </a>
+         <table style="border:1px solid white;border-collapse:collapse;">
+        <tr style="border:1px solid #000000">
+           <td style="background-color:#228B22;color:white;">Засновники</td>
+           <td style="background-color:#D2691E">Horace Dodge та John Dodge</td>
+        </tr> 
+        <tr style="border:1px solid #000000">
+            <td style="background-color:#228B22;color:white;">Перший авто</td>
+            <td style="background-color:#D2691E">Brothers</td>
+        </tr>
+        <tr style="border:1px solid #000000">
+            <td style="background-color:#228B22;color:white;">Всього випущено</td>
+            <td style="background-color:#D2691E">249</td>
+        </tr>
+        <tr style="border:1px solid #000000">
+            <td style="background-color:#228B22;color:white;">Самий новий</td>
+            <td style="background-color:#D2691E">Challenger</td>
+        </tr> 
+        <tr style="border:1px solid #000000">
+            <td style="background-color:#228B22;color:white;">Всього випущено</td>
+            <td style="background-color:#D2691E">165500</td>
+        </tr>
+    </table>
         <main>
-            <h2>1900—1942</h2>
+
+            <p><b>Dodge</b> — американська автомобілебудівна компанія в складі корпорації Крайслер, яка спеціалізується на випуску легкових автомобілів, пікапів, мінівенів та спортивних автомобілів. Штаб-квартира розташована в Гайленд-парку (штат Мічиган). Сьогодні, разом з легковими автомобілями, під маркою Dodge випускаються також позашляховики, мінівени і пікапи. Логотип компанії Dodge регулярно мінявся, але найчастіше, як і в наш час коли в емблемі фігурувала голова барана. По одній з версій, причиною цьому була одна з моделей Dodge, зігнутий вихлопний колектор якої нагадував виті роги гірського барана.</p>
+            <p>У складі корпорації Chrysler, Dodge виділяється своїм спортивно-позашляховим іміджем. Легковий асортимент Dodge повністю копіює такі від компаній Chrysler і Plymouth, зате позашляховики фірми випускаються лише під однією маркою. Очевидно, завдяки цьому факту, а також безперечній зовнішній привабливості моделей Dakota, Durango і Ram, ім'я Dodge асоціюється з позашляховиками і, звичайно ж, спортивний суперавтомобіль Viper, що випускається як спортивне купе</p>
+            <h2 style="text-align:center">1900—1942</h2>
             <p><b>Компания Dodge</b> была основана в 1900 году братьями Джоном и Горасом Додж. Её основной деятельностью стал выпуск комплектующих для развивающейся автомобильной промышленности. Добившись успеха в этой сфере, братья Додж решили, что пора начать производство собственного автомобиля.</p>
             <p><b>Первая машина Dodge</b> Brothers, которую позже шутливо прозвали Старушка Бетси, покинула завод 14 ноября 1914 года — а вслед за ней до конца года Доджи произвели еще 249 точно таких же автомобилей. К 1920 году компания занимала второе место по выпуску автомобилей после компании Ford, но в том же 1920 оба брата скончались, и новым главой компании стал Фред Дж. Хейнс. Состояние братьев Додж было солидным — по 20 с лишним миллионов долларов у каждого. Наследниками братьев стали вдовы, которые получили по 50 % уставного капитала. Но обе вдовы предпринимательскими талантами не обладали, и дела компании пошли на спад. В 1925 году вдовы продали её инвестиционной группе Dillon, Read & Co за 146 миллионов долларов. Несмотря на усилия новых владельцев, Dodge терял позиции на рынке, и инвесторы начали поиск покупателя для компании. Этим человеком стал Уолтер Крайслер, и в 1928 году компания Dodge вошла в состав корпорации Chrysler.
-            <h2>1945—1980</h2>
+            <h2 style="text-align:center">1945—1980</h2>
             </p>Во время Второй мировой войны компания Dodge занималась преимущественно выпуском тяжёлых джипов (серии WC и WF), а также производством авиационных двигателей. Dodge WC поставлялся в СССР по ленд-лизу и на жаргоне шоферов назывался «Додж три четверти» из-за своей грузоподъёмности 750 кг (по аналогии с «полуторкой» ГАЗ-ММ).
             <p></p>
     
             </main>
         <footer>
-            
+        <p>Повна розповіть про компанію <a href="https://www.youtube.com/watch?v=gkF1N4m-ROI"><font color="blue">Dodge</font></a></p>  
         </footer>
     </body>
 </html>
