--- a/index.html
+++ b/index.html
@@ -35,12 +35,20 @@
 
             <p><b>Dodge</b> — американська автомобілебудівна компанія в складі корпорації Крайслер, яка спеціалізується на випуску легкових автомобілів, пікапів, мінівенів та спортивних автомобілів. Штаб-квартира розташована в Гайленд-парку (штат Мічиган). Сьогодні, разом з легковими автомобілями, під маркою Dodge випускаються також позашляховики, мінівени і пікапи. Логотип компанії Dodge регулярно мінявся, але найчастіше, як і в наш час коли в емблемі фігурувала голова барана. По одній з версій, причиною цьому була одна з моделей Dodge, зігнутий вихлопний колектор якої нагадував виті роги гірського барана.</p>
             <p>У складі корпорації Chrysler, Dodge виділяється своїм спортивно-позашляховим іміджем. Легковий асортимент Dodge повністю копіює такі від компаній Chrysler і Plymouth, зате позашляховики фірми випускаються лише під однією маркою. Очевидно, завдяки цьому факту, а також безперечній зовнішній привабливості моделей Dakota, Durango і Ram, ім'я Dodge асоціюється з позашляховиками і, звичайно ж, спортивний суперавтомобіль Viper, що випускається як спортивне купе</p>
-            <h2 style="text-align:center">1900—1942</h2>
-            <p><b>Компания Dodge</b> была основана в 1900 году братьями Джоном и Горасом Додж. Её основной деятельностью стал выпуск комплектующих для развивающейся автомобильной промышленности. Добившись успеха в этой сфере, братья Додж решили, что пора начать производство собственного автомобиля.</p>
-            <p><b>Первая машина Dodge</b> Brothers, которую позже шутливо прозвали Старушка Бетси, покинула завод 14 ноября 1914 года — а вслед за ней до конца года Доджи произвели еще 249 точно таких же автомобилей. К 1920 году компания занимала второе место по выпуску автомобилей после компании Ford, но в том же 1920 оба брата скончались, и новым главой компании стал Фред Дж. Хейнс. Состояние братьев Додж было солидным — по 20 с лишним миллионов долларов у каждого. Наследниками братьев стали вдовы, которые получили по 50 % уставного капитала. Но обе вдовы предпринимательскими талантами не обладали, и дела компании пошли на спад. В 1925 году вдовы продали её инвестиционной группе Dillon, Read & Co за 146 миллионов долларов. Несмотря на усилия новых владельцев, Dodge терял позиции на рынке, и инвесторы начали поиск покупателя для компании. Этим человеком стал Уолтер Крайслер, и в 1928 году компания Dodge вошла в состав корпорации Chrysler.
-            <h2 style="text-align:center">1945—1980</h2>
-            </p>Во время Второй мировой войны компания Dodge занималась преимущественно выпуском тяжёлых джипов (серии WC и WF), а также производством авиационных двигателей. Dodge WC поставлялся в СССР по ленд-лизу и на жаргоне шоферов назывался «Додж три четверти» из-за своей грузоподъёмности 750 кг (по аналогии с «полуторкой» ГАЗ-ММ).
-            <p></p>
+            <h2 style="text-align:center">1920-1930</h2>
+            <p>На вершині успіху брати померли: Джон від пневмонії, Горацій від цироза печінки. Статки братів Додж був пристойним — по 20 з гаком мільйонів у кожного. Крім того, спадкоємці братів (а окрім вдів у них нікого не залишилося), отримали по 50% статутного капіталу. Але обидві вдови підприємницькими талантами не володіли, і компанія почала терпіти збитки.
+
+За 145 мільйонів доларів Dodge викупив консорціум американських банків, що трохи поліпшило її фінансове положення. У 1927 році Dodge запропонувала свою першу 6-циліндрову машину марки Senior Six з гідроприводом гальм, що замінила з наступного року всі 4-циліндрові моделі. У 1928 році до неї додалася дешевший і економічніший автомобіль Victory Six.
+
+Напередодні економічної кризи Dodge знову опинився на межі банкрутства, і її керівництво ухвалило рішення продати компанію висхідній зірці того часу — Волтеру Крайслеру, який у той час будував свою власну автоімперію, скуповуючи всі автозаводи без розбору. У 1928 концерн Dodge увійшов до складу корпорації Chrysler і автомобіль Dodge став торговою маркою Chrysler.
+            <h2 style="text-align:center">1945-1970</h2>
+            <p>У роки війни вантажівки 1/2 т, 3/4 т Dodge WC54, Dodge WC64 використовувались для амбулаторій. У перші післявоєнні роки компанія продовжувала впускати трохи змінені моделі, розроблені до 1942 року. У 1949 році з'явилися перші нові автомобілі марки Wayfarer, Meadowbrook і Coronet з 6-циліндровим двигуном потужністю 102 к.с. і напівавтоматичною трансмісією.
+
+Coronet, що випускався з перших післявоєнних років, в 1953 році знайшов другу молодість завдяки новому сучасному кузову і двигуну V8 з півсферичними камерами згорання, хоча він пропонувався також і із старим 6-циліндровим мотором. В порівнянні з попередніми моделями він виглядав досконалішим. Серед гамми автомобілів Coronet, що оснащувалися різними кузовами, особливо елегантними виглядали дводверний 5-місцевий кабріолет і аналогічний йому «хардтоп» з жорстким дахом, такий, що мав позначення Diplomat. Був також 5-дверний вантажопасажирський варіант Sierra. Всього за перший рік було виготовлено понад 300 тисяч автомобілів Coronet . З невеликими зовнішніми змінами модель випускалася 3 роки.
+
+З випуском в 1960 році марки Polara і Matador, Dodge перейшов на виробництво автомобілів з несучими кузовами. Одночасно було освоєно серійне виробництво малогабаритного автомобіля марки Dart, а в 1961 році був представлений компактний Lancer з 6-циліндровим мотором об'ємом в 2785 см³.</p>
+
+</p>
     
             </main>
         <footer>
@@ -48,3 +56,4 @@
         </footer>
     </body>
 </html>
+        
