--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <title>Dodge</title>
     <body style="background-color:#ADD8E6">
-        <header>
+        <header style="background-color:#666699">
           <img src="https://ic.pics.livejournal.com/cardomina/62795088/39307/39307_900.jpg" width="130" height="100">
           <h1 style="text-align:center;font-size:50px">Dodge</h1>
           <h2>Логотип</h2>
